# ive

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
prompts/: DESIGN.md
src/ive/: cli.py  config.py  mistral_agent.py
src/ive/prompts/: 1.md  2.md  3.md  4.md  5.md  DESIGN.md  script.md
